# stremio-lightning

./: .ci-expr-probe.txt  .gitignore  Cargo.toml  LICENSE  README.md  handover.md  package-lock.json  package.json  progress.md  svelte.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: publish-update-manifest.yml  publish.yml
.kilo/reports/: rust-crate-maintainability-report.md
assets/: io.github.theguy000.StremioLightning.desktop  io.github.theguy000.StremioLightning.metainfo.xml  io.github.theguy000.stremio-lightning.desktop  io.github.theguy000.stremio-lightning.metainfo.xml
crates/stremio-lightning-core/: Cargo.toml
crates/stremio-lightning-core/src/: app_update.rs  bridge_assets.rs  discord_rpc.rs  host_api.rs  lib.rs  logging.rs  mods.rs  pip.rs  player_api.rs  settings.rs  streaming_logs.rs  streaming_server.rs  validation.rs
crates/stremio-lightning-linux/: Cargo.toml
crates/stremio-lightning-linux/src/: app.rs  cef.rs  e2e_host.rs  host.rs  lib.rs  main.rs  native_window.rs  player.rs  render.rs  servo_runtime.rs  smoke.rs  streaming_server.rs  webview_runtime.rs
crates/stremio-lightning-linux/src/native_window/: x11.rs
crates/stremio-lightning-linux/tests/: e2e_host.rs  process_spawner.rs  smoke.rs
crates/stremio-lightning-macos/: Cargo.toml  build.rs
crates/stremio-lightning-macos/resources/: Info.plist
crates/stremio-lightning-macos/src/: app.rs  app_integration.rs  diagnostics.rs  host.rs  lib.rs  main.rs  native_window.rs  packaging.rs  player.rs  streaming_server.rs  webview_runtime.rs
crates/stremio-lightning-windows/: Cargo.toml  build.rs  windows-shell.exe.manifest  windows-shell.rc
crates/stremio-lightning-windows/src/: host.rs  lib.rs  main.rs  player.rs  resources.rs  server.rs  servo_runtime.rs  settings.rs  single_instance.rs  webview.rs  window.rs
crates/stremio-lightning-windows/tests/fixtures/: host_contract.json
crates/xtask/: Cargo.toml
crates/xtask/src/: common.rs  main.rs  package_linux.rs  package_macos.rs  package_windows.rs  setup.rs  validation.rs
docs/: current-baseline.md  developer-guide.md  flatpak-appstream-metadata-todo.md  flatpak-appstream-metadata-todo.txt  flatpak-servo-requirements.md  macos-packaging.md  macos-shell-gap-analysis.md  macos-wkwebview-shell-crate-plan.md  manual-smoke-checklist.md  packaging.md  platform-shell-migration-plan.md  plugin-api.md  progress.md  runtime-architecture.md  servo-migration-plan.md  stremio-community-feature-parity-todo.md  windows-webview2-shell-crate-plan.md  windows-webview2-shell-gap-analysis.md
flatpak/: cargo-sources.json  io.github.theguy000.StremioLightning.json  io.github.theguy000.stremio-lightning.json
scripts/: build-bridge.mjs  build-linux-appimage.sh  bump-version.cjs  check-deps.js  download-linux-shell-deps.sh  download-macos-shell-deps.sh  download-windows-shell-deps.sh  generate-tauri-config.js  install-linux-flatpak.sh  package-linux-appimage.sh  package-linux-flatpak.sh  setup.js
src/: App.svelte  app.css  global.d.ts  index.html  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.base.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: bridge.js  download-deps.sh  download-server.sh  mod-ui.js
src-tauri/src/: app_updater.rs  commands.rs  discord_rpc.rs  lib.rs  main.rs  mod_manager.rs  player.rs  shell_transport.rs  streaming_server.rs
src/lib/: icons.ts  ipc.test.ts  ipc.ts  logging.test.ts  logging.ts  plugin-api.test.ts  plugin-api.ts  types.ts
src/lib/components/: AboutTab.svelte  LogsTab.svelte  MarketplaceTab.svelte  ModsButton.svelte  ModsPanel.svelte  PluginSettingsModal.svelte  PluginsTab.svelte  SettingsTab.svelte  ThemesTab.svelte
src/lib/host/: bridge-bootstrap.test.ts  host-api.test.ts  host-api.ts
src/lib/stores/: marketplace.ts  plugins.ts  settings.ts  themes.ts
src/styles/: controls.css  logs.css  modal.css  mods-button.css  panel.css  responsive.css  supporting-components.css
src/test/: setup.ts
web/bridge/: bridge.js  polyfills.js  servo-compat.css
web/bridge/src/: back-button.js  cast-fallback.js  discord-rpc.js  external-links.js  logging.js  main.js  pip.js  shell-detection.js  shell-transport.js  shortcuts.js  styles.js  update-banner.js  utils.js  youtube-intercept.js
