[package]
name = "stremio-lightning"
version = "0.1.0"
edition = "2021"

[lib]
name = "stremio_lightning_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "unstable"] }
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tauri-plugin-opener = "2.5.3"
reqwest = { version = "0.13.2", features = ["json"] }
regex = "1"
discord-rich-presence = "1.1.0"

[target.'cfg(windows)'.dependencies]
libmpv2 = { version = "5.0.3", default-features = false }
