[package]
name = "stremio-lightning-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["app-updates", "mods"]
app-updates = ["dep:reqwest"]
mods = ["dep:reqwest"]

[dependencies]
regex = "1"
reqwest = { version = "0.13.2", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
