[package]
name = "stremio-lightning-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
stremio-lightning-core = { path = "../stremio-lightning-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt", "sync"] }
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_20"] }
webkit = { package = "webkit6", version = "0.6.1", features = ["v2_50"] }
libmpv2 = "5.0.3"
epoxy = "0.1.0"
libc = "0.2"
libloading = "0.9.0"

[features]
default = []
# Phase 3 follows the upstream stremio-linux-shell stack: GTK4 + WebKitGTK 6
# for the web layer, with libmpv rendered through GTK GLArea for native video.
native-shell = []
