[package]
name = "stremio-lightning-macos"
version = "0.1.0"
edition = "2021"

[dependencies]
stremio-lightning-core = { path = "../stremio-lightning-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
libmpv2 = { version = "5.0.3", default-features = false }
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2-web-kit = "0.3.2"
