[package]
name = "stremio-lightning-windows"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
stremio-lightning-core = { path = "../stremio-lightning-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
libmpv2 = { version = "5.0.3", default-features = false }
libmpv2-sys = { version = "4.0.1" }
windows = { version = "0.62.2", features = ["Win32_Foundation"] }
