[package]
name = "stremio-lightning-windows"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
stremio-lightning-core = { path = "../stremio-lightning-core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
libmpv2 = { version = "5.0.3", default-features = false }
libmpv2-sys = { version = "4.0.1" }
webview2-com = "0.39.1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Security", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_IO", "Win32_System_JobObjects", "Win32_System_LibraryLoader", "Win32_System_Pipes", "Win32_System_Threading", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
